syntax = "proto3";

package products;

message Product {
  int32 id = 1;
  string title = 2;
  double price = 3;
  string short_description = 4;
  string description = 5;
  string category = 6;
  repeated string tags = 7;
  string sku = 8;
  string weight = 9;
  string dimensions = 10;
  string color = 11;
  string material = 12;
  string image = 13;
  double rating = 14;
  int32 qty = 15;
}

message GetProductRequest {
  int32 id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message ListProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListProductsResponse {
  repeated Product products = 1;
}

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}
